--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 <div class="col-12 col-md-3" data-aos="slide-right">
                     <div class="row"><img class="img-fluid" src="assets/img/illustrations/TungGames.png" loading="auto" width="250" height="196" style="padding-left: 70px;padding-right: 70px;"></div>
                     <div class="row my-3"><img class="img-fluid" src="assets/img/illustrations/gamelogo.png" loading="auto"></div>
-                    <div class="fw-bold d-flex align-items-center mb-2"><span>TungGames f.t KDMewcon</span></div>
+                    <div class="fw-bold d-flex align-items-center mb-2"><span>HungGames KDMewcon</span></div>
                 </div><!-- End: Social Icons -->
                 <!-- Start: Services -->
                 <div class="col-sm-4 col-md-3 text-lg-start d-flex flex-column" data-aos="slide-right">
